--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-src2pdf takes your xypic diagram and returns a pdf or a png.
-Working on it now. Nothing's ready yet.
--Vlad, 11/27/2010
+presheaf takes your xypic diagram and returns a pdf or a png.
+Working on it.
+-Vlad, 07/02/2011
