Fixed a bug whereby )) was converted to /, etc all logging done via OS.log (don't we need a regular logger?) work also, added all the files that wre mysteriously absent one issue left - slow history update on my mac at work

--- a/todo.txt
+++ b/todo.txt
@@ -11,12 +11,22 @@ todo
 * include all examples from xydoc
 + make all the examples work
 + favico
-- make it run locally
-- store session? cookie?, show last instances
-- ajax?
+? make it run locally
+* http://www.websequencediagrams.com/
++ store session? cookie?, show last instances
++ ajax
 + try to find a micro ubuntu
+  bugs:
+   - ))->\
+   - history redrawn much later, how come?
 - draw categories
 - tikz
-- http://www.websequencediagrams.com/
 - http://mathurl.com/
+- http://www.codecogs.com/latex/eqneditor.php
+
+** separate title and status
+** a matrix with samples
+- use rsync?
+- box.net api key is n2p8dgkm3s9qdv9xl4vtrt1ils8yix93 (app is presheaf)
+
 
